updated Signal Light Assembly

--- a/IrDistanceSensorTest/IrDistanceSensorTest/IrDistanceSensorTest.vcxproj.filters
+++ b/IrDistanceSensorTest/IrDistanceSensorTest/IrDistanceSensorTest.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="IrDistanceSensorTest.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.IrDistanceSensorTest.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
