--- a/MotorAndServoTester_NAVI/MotorAndServoTester_NAVI/MotorAndServoTester_NAVI.vcxproj.filters
+++ b/MotorAndServoTester_NAVI/MotorAndServoTester_NAVI/MotorAndServoTester_NAVI.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="WheelEncoderTester_NAVI.ino" />
+    <None Include="MotorAndServoTester_NAVI.ino" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="__vm\.WheelEncoderTester_NAVI.vsarduino.h">
+    <ClInclude Include="__vm\.MotorAndServoTester_NAVI.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
