working on IMU code. Using the AHRS code instead of my own from scratch. Intergrating it in a class.

--- a/NOT USED/ImuTester[old]/ImuTester.vcxproj.filters
+++ b/NOT USED/ImuTester[old]/ImuTester.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="IMUTester.ino" />
+    <None Include="ImuTester.ino" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="__vm\.IMUTester.vsarduino.h">
+    <ClInclude Include="__vm\.ImuTester.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
