updating Rover Photo and Temp Tester. Also changed the R0 constant from 10k to 5k to match what was measured on the off rover unit GPS CCA

--- a/RoverPhotoAndTempTester/RoverPhotoAndTempTester/RoverPhotoAndTempTester.vcxproj.filters
+++ b/RoverPhotoAndTempTester/RoverPhotoAndTempTester/RoverPhotoAndTempTester.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="RoverPhotoAndTempTester.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.RoverPhotoAndTempTester.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
